Fixed a bug with infobox not being visible when graph is invisible

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -682,8 +682,18 @@ div[datepicker] {
     overflow: hidden;
 }
 
-.graph-hidden {
+.graph-collapsed {
 	display: none;
+}
+
+.graph-hidden {
+    display: inline-block;
+    width: 70%;
+	visibility: hidden;
+
+	svg {
+		display: none;
+	}
 }
 
 .graph-container-short {
